fix vertical whitespace

--- a/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
+++ b/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
@@ -4,6 +4,12 @@ h2 {
   font-size: 2rem;
 }
 
+.lol {
+	padding-right: 10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
 .legendContainer {
   .legendAsOf {
     font-size: 1rem;
